fixing display box issue on iPhone

--- a/css/styles.css
+++ b/css/styles.css
@@ -193,6 +193,20 @@ h1, h2, h3, h4, h5, h6 {
     text-align: center;
     font-size: .75rem;
 }
+@media (max-width: 1028px) {
 
+    #title {
+      text-align: center;
+    }
+
+    .m-logos {
+        text-align: center;
+        display: inline-flex;
+        height: 100px;
+        width: 200px;
+        margin-top: .25rem;
+        margin-bottom: .25rem;
+    }
+  }
 
 
